tests/fsharp/typecheck/sigs/neg08.bsl

neg08.fs(7,24,7,55): typecheck error FS0033: The type 'System.Collections.Generic.List<_>' expects 1 type argument(s) but is given 0

neg08.fs(9,24,9,67): typecheck error FS0033: The type 'System.Collections.Generic.List<_>' expects 1 type argument(s) but is given 2

neg08.fs(16,8,16,10): typecheck error FS0670: This code is not sufficiently generic. The type variable 'b could not be generalized because it would escape its scope.

neg08.fs(21,1,21,28): typecheck error FS0919: Exception abbreviations must refer to existing exceptions or F# types deriving from System.Exception

neg08.fs(28,17,28,21): typecheck error FS0039: The record label 'test' is not defined.

neg08.fs(30,9,30,12): typecheck error FS0789: '{ }' is not a valid expression. Records must include at least one field. Empty sequences are specified by using Seq.empty or an empty list '[]'.

neg08.fs(43,18,43,19): typecheck error FS0859: No abstract property was found that corresponds to this override

neg08.fs(48,18,48,19): typecheck error FS0855: No abstract or interface member was found that corresponds to this override

neg08.fs(55,7,55,14): typecheck error FS0773: Cannot create an extension of a sealed type

neg08.fs(55,7,55,14): typecheck error FS0776: Object construction expressions may only be used to implement constructors in class types

neg08.fs(61,19,61,26): typecheck error FS0039: The type 'Type' does not define the field, constructor or member 'value__'.

neg08.fs(79,5,79,44): typecheck error FS0502: The member or object constructor 'Random' takes 0 type argument(s) but is here given 1. The required signature is 'static member Variable.Random: y: Variable<'a> -> Variable<'a>'.
